--- a/example.html
+++ b/example.html
@@ -7,7 +7,7 @@
 <body>
 	<script src="linxlAddress.js"></script>
 	<script type="text/javascript">
-		console.log(linxlAddress('18300000000赵三广东广州天河林和中路11号'))
+		console.log(linxlAddress('18300000000赵三广东广州天河区林和中路11号'))
 	</script>
 </body>
 </html>
